--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <li>Vagrant</li>
             <li>Docker</li>
             <li>Ansible</li>
-            <li>Integración continua super</li>
+            <li>Integración continua: Madurez y produtividad en el desarollo de software</li>
         </ul>
     </body>
 </html>
