--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <li>Docker</li>
             <li>Ansible</li>
             <li>Integración continua: Madurez y produtividad en el desarollo de software</li>
+            <li>Kubernetes</li>
         </ul>
     </body>
 </html>
