--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <ul>
             <li>Vagrant: Gerenciando máquinas virtuales</li>
             <li>Docker: creando containers sin dolor de cabeza</li>
-            <li>Ansible: Infraestrucutra como código</li>
+            <li>Ansible</li>
             <li>Integración continua: Madurez y produtividad en el desarollo de software</li>
             <li>Kubernetes</li>
         </ul>
