--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <li>Docker: creando containers sin dolor de cabeza</li>
             <li>Ansible</li>
             <li>Integración continua: Madurez y produtividad en el desarollo de software</li>
-            <li>Kubernetes</li>
+            <li>Kubernetes: Introducción a la orquestación de containers</li>
         </ul>
     </body>
 </html>
